# abeliansandpile

./: README.md  pyproject.toml
notebooks/: abeliansandpile_notebook.ipynb
src/abeliansandpile/: __init__.py  _abeliansandpile.py
src/abeliansandpile/_tests/: test_abeliansandpile.py
