[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
authors = [
    { name = "Leo Guignard", email = "leo.guignard@univ-amu.fr"},
]
maintainers = [
    {name = "Leo Guignard", email = "leo.guignard@univ-amu.fr"}
]
name = "abeliansandpile"
description = "A quick implementation of abelian sandpiles"
version = "0.1.0"
license-files = [ "LICENSE" ]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy", 
    "scipy", 
    "jupyter", 
]

[project.urls]
"Bug Tracker" = "https://github.com/leoguignard/abeliansandpile/issues"
Documentation = "https://github.com/leoguignard/abeliansandpile#README.md"
"Source Code" = "https://github.com/leoguignard/abeliansandpile"
"User Support" = "https://github.com/leoguignard/abeliansandpile/issues"


[project.scripts]
"abeliansandpile" = "abeliansandpile:run_app"

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "ruff",
    "bumpver",
    "pytest",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/abeliansandpile/__init__.py" = [
    '__version__ = "{version}"',
]
